After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777302 - The 'back' button does not always work the right way
The 'back' button does not always work the right way
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-16 06:08 UTC by Mohammed Sadiq
Modified: 2017-01-16 15:31 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mohammed Sadiq 2017-01-16 06:08:02 UTC
How to reproduce:

1. Open recipes -> Click on 'Vegetarian recipes'
2. Click on 'Donauwellen'
3. Click on 'Matthias' (in Recipe by Matthias, bottom)
4. Now click back button in HeaderBar

Result:

The page stack content doesn't change, but the title changes to 'Vegetarian recipes'

Expected result:

The recipe page of 'Donauwellen' should be shown once the back button is pressed. When the back button is pressed again, the 'Vegetarian recipes' page should be shown.
Comment 1 Matthias Clasen 2017-01-16 12:11:48 UTC
yes. the way the back button works was changed. it is not meant to keep a full log of all visited pages anymore.
Comment 2 Mohammed Sadiq 2017-01-16 13:04:45 UTC
(In reply to Matthias Clasen from comment #1)
> yes. the way the back button works was changed. it is not meant to keep a
> full log of all visited pages anymore.

Sorry for the misunderstanding. I have had explain a specific bug here. Ie, 
the Headerbar title has changed to 'Vegetarian recipes', but the page content has not changed.
As you said, I don't care the back button should stack up every page visit history. But this specific thing, I think this is a bug.

Please close if this is too expected (hopefully not).

Thanks.
Comment 3 Matthias Clasen 2017-01-16 13:38:46 UTC
thanks for adding that information. Will look
Comment 4 Matthias Clasen 2017-01-16 13:45:25 UTC
ah, this is because the chef page and the category page are actually the same, generic "list" page. So we don't store enough information to know that we actually need to load something different.

Alternatives for fixing this:
a) add separate pages for chefs/categories/seasons/favorites/... this should be fairly easy to do. Just need to doublecheck all the places where we check for visible-child-name == "list" in the code

b) add more information to the back stack entries to allow us to differentiate between chef and category pages

The first option is probably better.