Split off a separate chef page

For now, this is just a second instance of the list page. Eventually,
we may want to differentiate these further. This is just the minimal
change needed to fix a problem with the back stack handling for
list pages.

https://bugzilla.gnome.org/show_bug.cgi?id=777302